feat(game-history): add extensible read models
